module(
    name = "qt-bazel",
    version = "6.9.1",
)

bazel_dep(name = "glib", version = "2.82.2.bcr.5")
bazel_dep(name = "harfbuzz", version = "11.0.1")
bazel_dep(name = "icu", version = "76.1.bcr.3")
bazel_dep(name = "libpng", version = "1.6.48")
bazel_dep(name = "libxcb", version = "1.17.0.bcr.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
