load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_import(
    name = "dbus_ifso",
    interface_library = "libdbus-1.ifso",
    system_provided = True,
)

cc_library(
    name = "dbus",
    hdrs = glob(["dbus/*.h"]),
    includes = ["."],
    strip_include_prefix = ".",
    visibility = ["//qt_source:__subpackages__"],
    deps = select({
        "@platforms//cpu:aarch64": [],
        "//conditions:default": [":dbus_ifso"],
    }),
    linkopts = select({
        "@platforms//cpu:aarch64": [
            "-L/usr/lib/aarch64-linux-gnu",
            "-ldbus-1",
        ],
        "//conditions:default": [],
    }),
)
