
cc_import(
    name = "fontconfig_ifso",
    interface_library = "libfontconfig.ifso",
    system_provided = True,
)

cc_library(
    name = "fontconfig",
    hdrs = glob(["fontconfig/*.h"]),
    includes = ["."],
    strip_include_prefix = ".",
    visibility = ["//qt_source:__subpackages__"],
    deps = select({
        "@platforms//cpu:aarch64": [],
        "//conditions:default": [":fontconfig_ifso"],
    }),
    linkopts = select({
        "@platforms//cpu:aarch64": [
            "-L/usr/lib/aarch64-linux-gnu",
            "-lfontconfig",
        ],
        "//conditions:default": [],
    }),
)
